style.css
/* ... */
#sp-ac1>.xtabs-item {
    padding: 0;
}

#template-right-sidebar,
#split-right {
    min-width: calc(var(--sd-input-height) + var(--sd-border-size) + ((var(--sd-panel-padding) + var(--sd-input-padding)) * 2) + 1px);
}

.flex-start {
    justify-content: flex-start !important;
}

.flex-end {
    justify-content: flex-end;
}

#txt2img_header span,
#control_output_group span {
    display: none;
}

.scroll-hide {
    overflow-y: hidden !important;
    resize: none;
}

.no-labels span {
    display: none;
}

[id$='2img_script_container']>div>.form~div {
    padding: var(--sd-panel-padding);
    outline: var(--sd-input-border-size) solid var(--sd-panel-border-color);
    background-color: var(--sd-input-background-color);
    border-radius: var(--sd-border-radius);
    border: var(--sd-input-border-size) solid var(--sd-input-border-color);
}

.portal .gradio-accordion div:has([id^='setting_']) {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    flex: 1 1 0%;
    min-width: min(160px, 100%);
}

.portal .gradio-accordion .gradio-row:has([id^='setting_']) {
    padding: 0;
    background-color: transparent;
    outline: none;
}

#imageARPreview {
    position: absolute;
    top: 0;
    left: 0;
    outline: 2px solid var(--sd-main-accent-color);
    background: radial-gradient(circle, rgba(0, 0, 0, 0.2) 0%, var(--sd-main-accent-color) 200%);
    z-index: 9000;
    pointer-events: none;
    display: block;
}

.tab-nav button {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

#resize_mode>span,
.accordion:has(#inpaint_controls.hide) {
    display: none;
}

.accordion:has(#resize_mode) .accordion-bar,
.accordion:has(#inpaint_controls) .accordion-bar {
    background-color: var(--sd-input-background-color);
}

.icon-left button {
    display: flex;
    flex-direction: row-reverse;
    gap: 5px;
}

.thumbnails.scroll-hide {
    display: none;
}

.thumbnails.scroll-hide:has(.thumbnail-item:nth-child(2)) {
    display: flex;
}

.gradio-gallery .preview>img {
    height: 100% !important;
}

.gradio-gallery:has(.thumbnail-item:nth-child(2)) .preview>img {
    height: calc(100% - 60px) !important;
}

.tabulator {
    border: 1px solid var(--sd-panel-border-color);
    background-color: var(--sd-panel-background-color);
}

.tabulator .tabulator-header {
    border-bottom: 1px solid var(--sd-panel-border-color);
    background-color: var(--sd-panel-background-color);
    color: var(--sd-label-color);
}

.tabulator .tabulator-tableholder .tabulator-table {
    background-color: var(--sd-panel-background-color);
    color: var(--sd-label-color);
}

.tabulator-row {
    background-color: var(--sd-panel-background-color);
}

.tabulator-row.tabulator-row-even {
    background-color: var(--sd-panel-background-color);
}

.tabulator-row.tabulator-selectable:hover {
    background-color: var(--sd-input-background-color);
}

.tabulator-row .tabulator-cell {
    border-right: 1px solid var(--sd-panel-border-color);
}

.rgRow {
    transition: none !important;
}

button.gridjs-sort-neutral {
    width: 13px !important;
    height: 13px !important;
    min-width: unset;
    min-height: unset;
}

.gridjs-td a {
    display: block;
}

.gridjs-tbody,
td.gridjs-td {
    background-color: var(--sd-panel-background-color);
}

td.gridjs-td {
    border: var(--sd-border-size) solid var(--sd-panel-border-color);
    padding: var(--sd-panel-padding);
}

.gridjs-container {
    color: var(--sd-label-color);
    font-size: 14px;
    font-family: inherit;
}

th.gridjs-th {
    background-color: var(--sd-input-background-color);
    border: var(--sd-border-size) solid var(--sd-input-border-color);
    color: var(--sd-label-color);
    padding: var(--sd-panel-padding);
}

th.gridjs-th-sort:focus,
th.gridjs-th-sort:hover {
    background-color: var(--sd-panel-background-color);
}

td.gridjs-td[data-column-id="description"] {
    flex-grow: 1;
}

.gridjs-tr {
    border: none;
    display: flex;
    flex-direction: column;
    gap: 1px;
}

.gridjs-tbody,
td.gridjs-td {
    background-color: var(--sd-panel-background-color);
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
    gap: var(--sd-gap-size);
    overflow-wrap: anywhere;
}

.additional,
.additional ul {
    display: none !important;
}

.additional,
.additional ul {
    margin: auto;
    padding: 0;
    gap: 5px;
    margin-bottom: 2px;
}

.card:hover .additional,
.card:hover .additional ul {
    display: flex;
}

.additional ul a {
    width: 24px;
    height: 24px;
    font-size: 125% !important;
    align-items: center;
    display: flex;
    justify-content: center;
    margin: 0 !important;
}

.params,
.media-desktop .results {
    min-width: 370px;
}

#template-settings .split-container:first-child,
.layout-extra-networks .split-container:first-child {
    min-width: 135px;
}

#split-right:not(.v-expand) {
    min-width: 512px;
}

#split-control-left:not(.v-expand) {
    min-width: 370px;
}

.layout-extra-networks:has(.show-dirs) .gutter,
.layout-extra-networks:has(.show-dirs) .split-container:first-child {
    display: none;
}

.layout-extra-networks:has(.show-dirs:not(.active)) .split-container {
    flex-basis: 100% !important;
}

.layout-extra-networks:has(.show-dirs.active) .gutter,
.layout-extra-networks:has(.show-dirs.active) .split-container:first-child {
    display: flex;
}

.layout-extra-networks {
    gap: 2px;
}

.layout-extra-networks>div:first-child {
    padding-bottom: 0 !important;
}

#layout-extra-networks {
    overflow: hidden;
}

.tabs_extensions .gradio-column {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.tabs_extensions colgroup {
    display: none;
}

.tabs_extensions table {
    width: 100%;
    background-color: var(--sd-panel-background-color);
}

.tabs_extensions thead {
    display: none;
}
/* ... */

